core/codegen/tests/ui-fail/from_form.stderr
error: enums are not supported
 --> $DIR/from_form.rs:4:1
  |
4 | enum Thing { }
  | ^^^^^^^^^^^^^^
  |
note: error occurred while deriving `FromForm`
 --> $DIR/from_form.rs:3:10
  |
3 | #[derive(FromForm)]
  |          ^^^^^^^^

error: tuple structs are not supported
 --> $DIR/from_form.rs:8:1
  |
8 | struct Foo1;
  | ^^^^^^^^^^^^
  |
note: error occurred while deriving `FromForm`
 --> $DIR/from_form.rs:7:10
  |
7 | #[derive(FromForm)]
  |          ^^^^^^^^

error: at least one field is required
  --> $DIR/from_form.rs:12:1
   |
12 | struct Foo2 {  }
   | ^^^^^^^^^^^^^^^^
   |
note: error occurred while deriving `FromForm`
  --> $DIR/from_form.rs:11:10
   |
11 | #[derive(FromForm)]
   |          ^^^^^^^^

error: tuple structs are not supported
  --> $DIR/from_form.rs:16:1
   |
16 | struct Foo3(usize);
   | ^^^^^^^^^^^^^^^^^^^
   |
note: error occurred while deriving `FromForm`
  --> $DIR/from_form.rs:15:10
   |
15 | #[derive(FromForm)]
   |          ^^^^^^^^

error: only one lifetime is supported
  --> $DIR/from_form.rs:20:20
   |
20 | struct NextTodoTask<'f, 'a> {
   |                    ^^^^^^^^
   |
note: error occurred while deriving `FromForm`
  --> $DIR/from_form.rs:19:10
   |
19 | #[derive(FromForm)]
   |          ^^^^^^^^

error: invalid form field name
  --> $DIR/from_form.rs:30:20
   |
30 |     #[form(field = "isindex")]
   |                    ^^^^^^^^^
   |
note: error occurred while deriving `FromForm`
  --> $DIR/from_form.rs:28:10
   |
28 | #[derive(FromForm)]
   |          ^^^^^^^^

error: duplicate field name
  --> $DIR/from_form.rs:39:5
   |
39 |     foo: usize,
   |     ^^^
   |
note: previous definition here
  --> $DIR/from_form.rs:37:20
   |
37 |     #[form(field = "foo")]
   |                    ^^^^^
note: error occurred while deriving `FromForm`
  --> $DIR/from_form.rs:35:10
   |
35 | #[derive(FromForm)]
   |          ^^^^^^^^

error: duplicate field name
  --> $DIR/from_form.rs:47:20
   |
47 |     #[form(field = "hello")]
   |                    ^^^^^^^
   |
note: previous definition here
  --> $DIR/from_form.rs:45:20
   |
45 |     #[form(field = "hello")]
   |                    ^^^^^^^
note: error occurred while deriving `FromForm`
  --> $DIR/from_form.rs:43:10
   |
43 | #[derive(FromForm)]
   |          ^^^^^^^^

error: duplicate field name
  --> $DIR/from_form.rs:55:20
   |
55 |     #[form(field = "first")]
   |                    ^^^^^^^
   |
note: previous definition here
  --> $DIR/from_form.rs:54:5
   |
54 |     first: String,
   |     ^^^^^
note: error occurred while deriving `FromForm`
  --> $DIR/from_form.rs:52:10
   |
52 | #[derive(FromForm)]
   |          ^^^^^^^^

error: duplicate attribute parameter: field
  --> $DIR/from_form.rs:62:28
   |
62 |     #[form(field = "blah", field = "bloo")]
   |                            ^^^^^^^^^^^^^^
   |
note: error occurred while deriving `FromForm`
  --> $DIR/from_form.rs:60:10
   |
60 | #[derive(FromForm)]
   |          ^^^^^^^^

error: malformed attribute: expected list
  --> $DIR/from_form.rs:69:7
   |
69 |     #[form]
   |       ^^^^
   |
   = help: expected syntax: #[form(key = value, ..)]
note: error occurred while deriving `FromForm`
  --> $DIR/from_form.rs:67:10
   |
67 | #[derive(FromForm)]
   |          ^^^^^^^^

error: expected key/value pair
  --> $DIR/from_form.rs:76:12
   |
76 |     #[form("blah")]
   |            ^^^^^^
   |
note: error occurred while deriving `FromForm`
  --> $DIR/from_form.rs:74:10
   |
74 | #[derive(FromForm)]
   |          ^^^^^^^^

error: expected key/value pair
  --> $DIR/from_form.rs:83:12
   |
83 |     #[form(123)]
   |            ^^^
   |
note: error occurred while deriving `FromForm`
  --> $DIR/from_form.rs:81:10
   |
81 | #[derive(FromForm)]
   |          ^^^^^^^^

error: unexpected attribute parameter: `beep`
  --> $DIR/from_form.rs:90:12
   |
90 |     #[form(beep = "bop")]
   |            ^^^^^^^^^^^^
   |
note: error occurred while deriving `FromForm`
  --> $DIR/from_form.rs:88:10
   |
88 | #[derive(FromForm)]
   |          ^^^^^^^^

error: duplicate invocation of `form` attribute
  --> $DIR/from_form.rs:98:5
   |
98 |     #[form(field = "bleh")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |
note: error occurred while deriving `FromForm`
  --> $DIR/from_form.rs:95:10
   |
95 | #[derive(FromForm)]
   |          ^^^^^^^^

error: invalid value: expected string literal
   --> $DIR/from_form.rs:105:20
    |
105 |     #[form(field = true)]
    |                    ^^^^
    |
note: error occurred while deriving `FromForm`
   --> $DIR/from_form.rs:103:10
    |
103 | #[derive(FromForm)]
    |          ^^^^^^^^

error: expected literal or key/value pair
   --> $DIR/from_form.rs:112:12
    |
112 |     #[form(field)]
    |            ^^^^^
    |
note: error occurred while deriving `FromForm`
   --> $DIR/from_form.rs:110:10
    |
110 | #[derive(FromForm)]
    |          ^^^^^^^^

error: invalid value: expected string literal
   --> $DIR/from_form.rs:119:20
    |
119 |     #[form(field = 123)]
    |                    ^^^
    |
note: error occurred while deriving `FromForm`
   --> $DIR/from_form.rs:117:10
    |
117 | #[derive(FromForm)]
    |          ^^^^^^^^

error: invalid form field name
   --> $DIR/from_form.rs:126:20
    |
126 |     #[form(field = "hello&world")]
    |                    ^^^^^^^^^^^^^
    |
note: error occurred while deriving `FromForm`
   --> $DIR/from_form.rs:124:10
    |
124 | #[derive(FromForm)]
    |          ^^^^^^^^

error: invalid form field name
   --> $DIR/from_form.rs:133:20
    |
133 |     #[form(field = "!@#$%^&*()_")]
    |                    ^^^^^^^^^^^^^
    |
note: error occurred while deriving `FromForm`
   --> $DIR/from_form.rs:131:10
    |
131 | #[derive(FromForm)]
    |          ^^^^^^^^

error: invalid form field name
   --> $DIR/from_form.rs:140:20
    |
140 |     #[form(field = "?")]
    |                    ^^^
    |
note: error occurred while deriving `FromForm`
   --> $DIR/from_form.rs:138:10
    |
138 | #[derive(FromForm)]
    |          ^^^^^^^^

error: invalid form field name
   --> $DIR/from_form.rs:147:20
    |
147 |     #[form(field = "")]
    |                    ^^
    |
note: error occurred while deriving `FromForm`
   --> $DIR/from_form.rs:145:10
    |
145 | #[derive(FromForm)]
    |          ^^^^^^^^

error: invalid form field name
   --> $DIR/from_form.rs:154:20
    |
154 |     #[form(field = "a&b")]
    |                    ^^^^^
    |
note: error occurred while deriving `FromForm`
   --> $DIR/from_form.rs:152:10
    |
152 | #[derive(FromForm)]
    |          ^^^^^^^^

error: invalid form field name
   --> $DIR/from_form.rs:161:20
    |
161 |     #[form(field = "a=")]
    |                    ^^^^
    |
note: error occurred while deriving `FromForm`
   --> $DIR/from_form.rs:159:10
    |
159 | #[derive(FromForm)]
    |          ^^^^^^^^

error: aborting due to 24 previous errors

